[gd_scene load_steps=4 format=3 uid="uid://dgirojuhamfat"]

[ext_resource type="Script" path="res://game/player/interaction_menu_2d.gd" id="1_h8doy"]
[ext_resource type="Texture2D" uid="uid://crovglpkjvq4f" path="res://assets/ui/border.png" id="2_iet4j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hccg"]

[node name="InteractionMenu2D" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 300.0
script = ExtResource("1_h8doy")

[node name="Border" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iet4j")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="Margin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8hccg")
tabs_visible = false

[node name="MenuTab" type="VBoxContainer" parent="Margin/TabContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/TabContainer/MenuTab"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Margin/TabContainer/MenuTab"]
layout_mode = 2

[node name="Menu" type="VBoxContainer" parent="Margin/TabContainer/MenuTab"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="Margin/TabContainer/MenuTab/Menu"]
layout_mode = 2
text = "Test1"

[node name="HSeparator2" type="HSeparator" parent="Margin/TabContainer/MenuTab"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Margin/TabContainer/MenuTab"]
layout_mode = 2
alignment = 1

[node name="Close" type="Button" parent="Margin/TabContainer/MenuTab/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Close"

[node name="ConfirmTab" type="VBoxContainer" parent="Margin/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Margin/TabContainer/ConfirmTab"]
layout_mode = 2
text = "Confirm"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Margin/TabContainer/ConfirmTab"]
layout_mode = 2

[node name="ConfirmMessage" type="Label" parent="Margin/TabContainer/ConfirmTab"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Margin/TabContainer/ConfirmTab"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Margin/TabContainer/ConfirmTab"]
layout_mode = 2
alignment = 1

[node name="ConfirmYes" type="Button" parent="Margin/TabContainer/ConfirmTab/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Yes"

[node name="ConfirmNo" type="Button" parent="Margin/TabContainer/ConfirmTab/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "No
"

[connection signal="pressed" from="Margin/TabContainer/MenuTab/Buttons/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Margin/TabContainer/ConfirmTab/Buttons/ConfirmYes" to="." method="_on_confirm_yes_pressed"]
[connection signal="pressed" from="Margin/TabContainer/ConfirmTab/Buttons/ConfirmNo" to="." method="_on_confirm_no_pressed"]
